--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,3 +30,5 @@ workflows:
       - say-hello:
           post-steps:
             - jira/notify
+                environment_type: production
+                job_type: deployment
