--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,5 +30,5 @@ workflows:
       - say-hello:
           post-steps:
             - jira/notify:
-                environment_type: production
+                environment_type: staging
                 job_type: deployment
