--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,8 @@ jobs:
           name: Run Fastlane
 orbs:
   rn: react-native-community/react-native@1.0.0
+  jira: circleci/jira@1.3.0
+
 version: 2.1
 workflows:
   test:
@@ -47,6 +49,11 @@ workflows:
       - rn/android_test:
           requires:
             - rn/android_build
+          post-steps:
+            - jira/notify:
+                environment_type: staging
+                job_type: build
+                scan_commit_body: true
       - fastlane_release:
           requires:
             - rn/android_test
