--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,29 @@
 jobs:
+  pre-build: &pre-build
+  docker:
+    - image: buildpack-deps:trusty
+  resource_class: small
+  environment:
+    CURRENT_BUILD: 0
+  steps:
+    - run:
+        name: Writing Build Number to a text file
+        command: echo "BuildNumber_"$(( $CIRCLE_BUILD_NUM + $CIRCLE_BUILD_NUM_ADJUST ))"_" > buildnumber.txt
+    - run: cat buildnumber.txt
+    - persist_to_workspace:
+        root: .
+        paths:
+          - buildnumber.txt
+          - ./builddetails/
+          
   analyse_js:
     executor: rn/linux_js
     steps:
       - attach_workspace:
           at: .
       - run: echo $CIRCLE_BUILD_NUM
+      - run: cat buildnumber.txt
+      - run: echo $(cat ../buildnumber.txt | awk -F_ '{print $2}')
 #       - run: echo 'export CIRCLE_BUILD_NUM="1234"' >> $BASH_ENV
 #       - run: echo $CIRCLE_BUILD_NUM
   
