--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,9 @@
 jobs:
   pre-build: &pre-build
-  docker:
-    - image: buildpack-deps:trusty
-  resource_class: small
+  executor: rn/linux_js
   environment:
     CURRENT_BUILD: 0
+    CIRCLE_BUILD_NUM_ADJUST: 99
   steps:
     - run:
         name: Writing Build Number to a text file
