--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           at: .
       - run: echo $CIRCLE_BUILD_NUM
       - run: cat buildnumber.txt
-      - run: echo $(cat ./buildnumber.txt | awk -F_ '{print $2}') >> $VED_YO
+#       - run: echo $(cat ./buildnumber.txt | awk -F_ '{print $2}') >> $VED_YO
 #       - run: echo 'export CIRCLE_BUILD_NUM="1234"' >> $BASH_ENV
 #       - run: echo $CIRCLE_BUILD_NUM
   
@@ -68,7 +68,7 @@ workflows:
             - checkout_code
           post-steps:
             - jira/notify:
-                environment: $VED_YO
+                environment: echo $(cat ./buildnumber.txt | awk -F_ '{print $2}')
                 environment_type: staging
                 job_type: deployment
                 scan_commit_body: true
