--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@ workflows:
             - checkout_code
           post-steps:
             - jira/notify:
-                environment: echo $(cat ./buildnumber.txt | awk -F_ '{print $2}')
+                environment: $(cat ./buildnumber.txt | awk -F_ '{print $2}')
                 environment_type: staging
                 job_type: deployment
                 scan_commit_body: true
