--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,7 +70,7 @@ workflows:
             - jira/notify:
                 environment: $(cat ./buildnumber.txt | awk -F_ '{print $2}')
                 environment_type: staging
-                job_type: deployment
+                job_type: build
                 scan_commit_body: true
 #       - rn/android_build:
 #           build_type: release
