--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - run: echo $CIRCLE_BUILD_NUM
+      - run: echo $CIRCLE_TOKEN
       - run: cat buildnumber.txt
 #       - run: echo $(cat ./buildnumber.txt | awk -F_ '{print $2}') >> $VED_YO
 #       - run: echo 'export CIRCLE_BUILD_NUM="1234"' >> $BASH_ENV
