--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,7 +72,7 @@ workflows:
                 - checkout_code
               post-steps:
                 - jira/notify:
-                    environment: $PLATFORM"_"$(cat ./buildnumber.txt | awk -F_ '{print $2}')
+                    environment: echo $PLATFORM"_"$(cat ./buildnumber.txt | awk -F_ '{print $2}')
                     environment_type: development
                     job_type: deployment
                     scan_commit_body: true
