--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,7 +73,7 @@ workflows:
                 - checkout_code
               post-steps:
                 - jira/notify:
-                    environment: cat "BuildNumber_"$(( $CIRCLE_BUILD_NUM + $CIRCLE_BUILD_NUM_ADJUST ))
+                    environment: $(cat ./buildnumber.txt | awk -F_ '{print $2}')
                     environment_type: development
                     job_type: deployment
                     scan_commit_body: true
