--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ workflows:
             - checkout_code
           post-steps:
             - jira/notify:
-                environment: $(cat ./buildnumber.txt | awk -F_ '{print "ANDROID "$2}')
+                environment: $(cat ./buildnumber.txt | awk -F_ '{print "ABC "$2}')
                 environment_type: development
                 job_type: deployment
                 scan_commit_body: true
@@ -73,7 +73,7 @@ workflows:
             - checkout_code
           post-steps:
             - jira/notify:
-                environment: $(cat ./buildnumber.txt | awk -F_ '{print "ANDROID "$2}')
+                environment: $(cat ./buildnumber.txt | awk -F_ '{print "PQR "$2}')
                 environment_type: development
                 job_type: deployment
                 scan_commit_body: true
