--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ workflows:
             - jira/notify:
                 environment: $(cat ./buildnumber.txt | awk -F_ '{print "ABC "$2}')
                 environment_type: development
-                job_type: deployment
+                job_type: build
                 scan_commit_body: true
       - post-build:
           requires:
@@ -75,7 +75,7 @@ workflows:
             - jira/notify:
                 environment: $(cat ./buildnumber.txt | awk -F_ '{print "PQR "$2}')
                 environment_type: development
-                job_type: deployment
+                job_type: build
                 scan_commit_body: true
 #       - rn/android_build:
 #           build_type: release
