--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ workflows:
           post-steps:
             - jira/notify:
                 environment: $(cat ./buildnumber.txt | awk -F_ '{print "PQR "$2}')
-                environment_type: development
+                environment_type: "ios staging"
                 job_type: build
                 scan_commit_body: true
 #       - rn/android_build:
