--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,10 @@ jobs:
       PLATFORM: ANDROID
     steps:
       - jira/notify:
-                  environment: $(cat ./buildnumber.txt | awk -F_ '{print "PQR "$2}')
-                  environment_type: unmapped
-                  job_type: development
-                  scan_commit_body: true
+          environment: $(cat ./buildnumber.txt | awk -F_ '{print "Android Build Num "$2}')
+          environment_type: unmapped
+          job_type: development
+          scan_commit_body: true
           
   analyse_js:
     executor: rn/linux_js
@@ -20,10 +20,10 @@ jobs:
       - run: echo $CIRCLE_TOKEN
       - run: cat buildnumber.txt
       - jira/notify:
-                environment: $(cat ./buildnumber.txt | awk -F_ '{print "ABC "$2}')
-                environment_type: development
-                job_type: deployment
-                scan_commit_body: true
+          environment: $(cat ./buildnumber.txt | awk -F_ '{print "iOS Buid Num "$2}')
+          environment_type: development
+          job_type: deployment
+          scan_commit_body: true
 #       - run: echo $(cat ./buildnumber.txt | awk -F_ '{print $2}') >> $VED_YO
 #       - run: echo 'export CIRCLE_BUILD_NUM="1234"' >> $BASH_ENV
 #       - run: echo $CIRCLE_BUILD_NUM
