--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - jira/notify:
           environment: $(cat ./buildnumber.txt | awk -F_ '{print "Android Build Num "$2}')
           environment_type: unmapped
-          job_type: development
+          job_type: deployment
           scan_commit_body: true
           
   analyse_js:
@@ -21,7 +21,7 @@ jobs:
       - run: cat buildnumber.txt
       - jira/notify:
           environment: $(cat ./buildnumber.txt | awk -F_ '{print "iOS Buid Num "$2}')
-          environment_type: development
+          environment_type: unmapped
           job_type: deployment
           scan_commit_body: true
 #       - run: echo $(cat ./buildnumber.txt | awk -F_ '{print $2}') >> $VED_YO
