--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ jobs:
     steps:
       - jira/notify:
           environment: $(cat ./buildnumber.txt | awk -F_ '{print "Android Build# "$2}')
-          environment_type: staging
-          job_type: testing
+          environment_type: testing
+          job_type: build
           scan_commit_body: true
           
   analyse_js:
